src/tailwind.css
@tailwind base;


#toggle:checked ~ label div.toggle-dot{
    @apply translate-x-4;
}

@tailwind components;
/* ====navbar :start */
.actived-menu{
    @apply px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-gray-200 rounded-lg dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 dark:text-gray-100 focus:outline-none;
}
.portfolio-menu{
    @apply px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none;
}
.about-menu{
    @apply px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none;
}
.contact-menu{
    @apply px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none;
}
dropdown{
    @apply flex flex-row items-center w-full px-4 py-2 mt-2 text-sm font-semibold text-left bg-transparent rounded-lg dark:bg-transparent dark:focus:text-white dark:hover:text-white dark:focus:bg-gray-600 dark:hover:bg-gray-600 md:w-auto md:inline md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none;
}


.collapse-item{
    @apply border-b-2 border-gray-200 py-5;
}
.collapse-header{
    @apply w-full text-left cursor-pointer list-none hover:text-red-600 transition duration-700 ease-in-out text-gray-600 dark:text-white;
}
.col-item{
    @apply hover:text-red-600 transition duration-700 ease-in-out text-gray-500 dark:text-white;
}
.coll-item{
    @apply hover:text-red-600 transition duration-700 ease-in-out text-gray-500 pb-2 dark:text-white;
}
.tag-button{
    @apply bg-transparent border dark:bg-white dark:text-gray-800 dark:border-white text-gray-600 rounded px-4 py-1 hover:bg-red-600 hover:text-white transition duration-700 ease-in-out;
}



.main-body{
    @apply max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto lg:flex lg:justify-between xl:flex xl:justify-between;
}
.left-dashboard{
    @apply h-auto xl:w-80 lg:w-80 md:max-w-4xl sm:max-w-4xl xl:mr-5 lg:mr-5;
}
.right-dashboard{
    @apply md:max-w-4xl lg:max-w-4xl xl:max-w-4xl mx-auto xl:mt-0 lg:mt-0 md:mt-20 sm:mt-20 mt-14 xl:ml-5 lg:ml-5;
}


.cart-history{
    @apply border my-8 py-3 px-3 xl:px-0 lg:px-0 xl:leading-none lg:leading-none leading-loose dark:border-gray-600;
}
.cart-history-header{
    @apply lg:flex lg:justify-around lg:items-center xl:flex xl:justify-around xl:items-center
}
.grid-btn{
    @apply text-gray-500 text-xl cursor-pointer;
}
.list-btn{
    @apply text-gray-500 text-xl ml-2 cursor-pointer;
}
.input-option{
    @apply xl:leading-none lg:leading-none md:leading-loose leading-loose xl:flex xl:justify-around xl:items-center lg:flex lg:justify-around lg:items-center md:flex md:justify-end md:items-center;
}
.option-left{
    @apply px-6 border-gray-200 sm:px-8 md:px-12 lg:px-4 xl:px-12 bg-transparent border py-2 rounded;
}
.option-right{
    @apply px-8 sm:px-10 border-gray-200 md:px-20 lg:px-6 xl:px-16 bg-transparent border py-2 rounded;
}

/* pricing desc start */




/* list-cart-item start */
.cart-list{
    @apply md:flex md:justify-end lg:flex lg:justify-end xl:flex xl:justify-end pb-7 xl:mt-0 lg:mt-0 md:mt-0 mt-7;
}
.cart-desc{
    @apply lg:ml-4 xl:ml-4 md:ml-4 xl:mt-0 lg:mt-0 md:mt-0 mt-3;
}
.cart-header{
    @apply text-lg text-gray-700 font-light dark:text-gray-100;
}
.cart-price{
    @apply text-gray-500 text-sm font-semibold py-2 dark:text-gray-100;
}
.discount-title{
    @apply bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0 ;
}
.cart-title{
    @apply text-gray-600 pb-2 dark:text-gray-100;
}
.cart-price-through{
    @apply text-red-500 font-semibold line-through;
}
.cart-link{
    @apply flex items-center;
}
.cart-icon-link{
    @apply bg-gray-50 rounded-md h-14 w-14 border dark:hover:bg-red-500 border-gray-50 dark:bg-gray-800 dark:border-gray-600 flex justify-center items-center hover:bg-red-600 mr-2 transition duration-700 ease-in-out;
}
.cart-icon{
    @apply text-gray-400 text-lg transition duration-700 ease-in-out;
}
/* list-cart-item end */



/* prod-cart start */
.prod-cart-header{
    @apply grid grid-cols-1 grid-rows-1 sm:grid sm:grid-cols-2 sm:grid-rows-2 md:grid md:grid-cols-2 md:grid-rows-2 lg:grid lg:grid-cols-3 lg:grid-rows-3 xl:grid xl:grid-cols-3 xl:grid-rows-3 gap-4;
}
.prod-single-cart{
    @apply bg-white shadow-xl transition duration-300 hover:shadow mt-4 sm:mt-0 md:mt-0 lg:mt-0 xl:mt-0;
}
.prod-cart-content{
    @apply bg-white border-gray-100 dark:bg-gray-800 border dark:border-gray-600;
}
.prod-cart-heading{
    @apply text-gray-800 text-sm dark:text-gray-100;
}
.prod-cart-price{
    @apply text-gray-800 text-sm py-2 dark:text-gray-100;
}
.prod-price-throught{
    @apply line-through text-red-600 ml-2;
}
.prod-cart-icon-link{
    @apply bg-gray-50 border dark:bg-transparent dark:hover:bg-red-500 dark:border-gray-600 dark:text-white border-gray-50 p-4 ml-2 rounded hover:bg-red-600 hover:border-red-600 group transition  duration-700 ease-in-out;
}
/* ... */

